# scream

./: .gitmodules
.github/workflows/: hello_world.yml  test-all-scream-ubuntu-latest.yml
cime/config/e3sm/machines/: config_compilers.xml  config_machines.xml
cime/scripts/Tools/: Makefile
cime/src/drivers/mct/cime_config/: config_component.xml
cime/src/share/util/: shr_pio_mod.F90
components/eamxx/src/control/: atmosphere_driver.cpp
components/scream/: CMakeLists.txt
components/scream/scripts/: machines_specs.py
components/scream/src/physics/p3/: atmosphere_microphysics.cpp
components/scream/src/physics/rrtmgp/: CMakeLists.txt  atmosphere_radiation.cpp  scream_rrtmgp_interface.hpp
components/scream/src/physics/zm/: CMakeLists.txt  atmosphere_deepconvection.cpp  atmosphere_deepconvection.hpp  zm_inputs_initializer.cpp
components/scream/tests/rrtmgp/: CMakeLists.txt  rrtmgp_stand_alone.cpp
